Index.html Steps 1-4 done

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
  <head>
   <title> Index </title>
  </head>
- 
- <body>
-  <h1> Raj Trivedi </h1>
+
+ <body style="font-size:20px;">
+  <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left">
+  <b> Name I go by in class: </b> Raj <br>
+  <b> Full first and last name: </b> Raj Trivedi <br>
+  <b> Link to the course website: </b> <a href="https://mattm401.github.io">CISC474 Course Website <br>
  </body>
 </html>
