Index page done; aboutMe skeleton page working

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
  </head>
 
  <body style="font-size:20px;">
-  <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left">
-  <b> Name I go by in class: </b> Raj <br>
-  <b> Full first and last name: </b> Raj Trivedi <br>
-  <b> Link to the course website: </b> <a href="https://mattm401.github.io">CISC474 Course Website <br>
+  <div overflow="hidden">
+   <a href="aboutMe.html">About Me</a>
+  </div>
+  <br>
+  
+  <div>
+   <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left">
+   <br>
+   <br>
+   <br>
+   <br>
+   <b> Name I go by in class: </b> Raj <br>
+   <b> Full first and last name: </b> Raj Trivedi <br>
+   <b> Link to the course website: </b> <a href="https://mattm401.github.io">CISC474 Course Website </a>
+  </div>
+  <br clear="all">
+  <br>
+
+  <div align="center">
+   <a href=""> Previous Student </a> &nbsp; <a href=""> Next Student </a>
+  </div>
+
  </body>
 </html>
