--- a/index.html
+++ b/index.html
@@ -4,26 +4,42 @@
  </head>
 
  <body style="font-size:20px;">
-  <div overflow="hidden">
+  
+  <div align="center" id="homepageHeading">
+   <h1> Home Page </h1>
+  </div>
+  
+  <div overflow="hidden" id="homepageLinks" align="center">
    <a href="aboutMe.html">About Me</a>
   </div>
-  <br>
   
-  <div>
-   <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left">
-   <br>
-   <br>
-   <br>
-   <br>
-   <b> Name I go by in class: </b> Raj <br>
-   <b> Full first and last name: </b> Raj Trivedi <br>
-   <b> Link to the course website: </b> <a href="https://mattm401.github.io">CISC474 Course Website </a>
+  <br>
+
+  <div id="homepageContent">
+   <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left"> 
+   <h2> Raj Trivedi | University Of Delaware</h2> 
+   <p> Hello everyone! I am Raj Trivedi. I am currently Senior pursuing BS in Computer Science. My expected date of graduation would be May 2022. 
+       Usually I go by Raj in almost all of my classes. This is CISC474 course on Advanced Web Technologies. Following is the link that would directly 
+       take you to the course website page: <br><br>
+       <a href="https://mattm401.github.io">CISC474 Course Website </a>
+       <br>
+       <br>
+       <ul style="list-style-position:inside;">
+        The aspects of web development that I am most interested in are as follows:
+        <li> Visual Design </li>
+        <li> Content </li>
+        <li> Web/Mobile Friendly </li>
+        <li> User Interaction </li>
+       </ul>
+          
+   </p>
   </div>
   <br clear="all">
   <br>
 
   <div align="center">
-   <a href=""> Previous Student </a> &nbsp; <a href=""> Next Student </a>
+   <button onclick="window.location.href='https://paultownshend.github.io/personalWebsite/'"> Previous Student </button>
+   <button onclick="window.location.href='https://acastro0726.github.io/'"> Next Student </button>
   </div>
 
  </body>
