Properly indented the source code for Index Page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
  <head>
   <title> Index </title>
@@ -17,7 +18,7 @@
 
   <div id="homepageContent">
    <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left"> 
-   <h2> Raj Trivedi | University Of Delaware</h2> 
+   <h2> Raj Trivedi | University Of Delaware </h2> 
    <p> Hello everyone! I am Raj Trivedi. I am currently Senior pursuing BS in Computer Science. My expected date of graduation would be May 2022. 
        Usually I go by Raj in almost all of my classes. This is CISC474 course on Advanced Web Technologies. Following is the link that would directly 
        take you to the course website page: <br><br>
@@ -34,10 +35,11 @@
           
    </p>
   </div>
+
   <br clear="all">
   <br>
 
-  <div align="center">
+  <div id="homepageButtons" align="center">
    <button onclick="window.location.href='https://paultownshend.github.io/personalWebsite/'"> Previous Student </button>
    <button onclick="window.location.href='https://acastro0726.github.io/'"> Next Student </button>
   </div>
