About Me page is fully functional; major changes required for Index Page

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,7 +3,74 @@
   <title> About Me </title>
  </head>
 
- <body>
-  <a href="index.html"> Back To Home Page </a>
+ <body style="font-size:20px;">
+  <div id="heading">
+   <h1 align="center"> About Me </h1>
+  </div>
+  
+  <div id="education">
+   <h2> Education </h2>
+   <img src="UD_image.jpeg" width="100" height="100" align="left">
+   <b> Major - </b> Computer Science <br>
+   <b> School Year - </b> Senior <br>
+   <b> Graduation Date - </b> May 2022 <br>
+   <b> Concentration - </b> Network Systems <br>
+  </div>
+
+  <br>
+  <br clear="all">
+
+  <div id="hobbiesInterests" overflow="hidden">
+   <h2> Hobbies/Interests </h2>
+
+   &nbsp; &nbsp;
+   <img src="singing_image.jpg" alt="Image of a Mic" width="300" height="300"> &nbsp; &nbsp;   
+   <img src="meditation_image.jpg" alt="Image of a person meditating" width="300" height="300">     
+   <br>
+
+   <b style="float:left; margin-left:150px"> Singing </b>
+   <b style="float:left; margin-left:230px"> Meditation </b>
+   <br> 
+   <br> &nbsp; &nbsp;
+
+   <img src="nature_image.jpg" alt="Image of a trees in Fall" width="300" height="300"> &nbsp; &nbsp;
+   <img src="watching_sports_image.jpg" alt="Image of a TV Remote and Sports channel" width="300" height="300">
+   <br>
+
+   <b style="float:left; margin-left:90px"> Walking out in nature </b>
+   <b style="float:left; margin-left:150px"> Watching sports </b> 
+  </div>
+  
+  <br>
+  <br>
+
+  <div id="interestingFact">
+   <h2> Interesting Fact </h2>
+   <img src="small_baby_image.jpeg" width="200" height="200" align="left">
+   <p> I was born on midnight of December 31<sup>st</sup>, 1999. This means it was a change of a Century(from 20th to 21st). 
+   <br> Thus, my closed ones also call me <b>millennium boy.</b>
+   </p>
+  </div>
+
+  <br>
+  <br clear="all">
+   
+  <div id="webDevelopmentAspect">
+   <h2> Web Development </h2>
+   <p> The aspects of web development that I am most interested in are as follows: </p>
+   <ul style="list-style-position:inside;">
+      <li> Visual Design </li>
+      <li> Content </li>
+      <li> Web/Mobile Friendly </li>
+      <li> User Interaction </li>
+   </ul>
+  </div>
+
+  <br>
+  <br>
+
+  <div id="buttons" align="center">
+   <button onclick="window.location.href='index.html'"> Back To Home Page </button>
+  </div>
  </body>
 </html>
