--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   <div id="homepageContent">
    <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left"> 
    <h2> Raj Trivedi | University Of Delaware </h2> 
-   <p> Hello everyone! I am Raj Trivedi. I am currently Senior pursuing BS in Computer Science. My expected date of graduation would be May 2022. 
-       Usually I go by Raj in almost all of my classes. This is CISC474 course on Advanced Web Technologies. Following is the link that would directly 
-       take you to the course website page: <br><br>
+   <p> I am Raj Trivedi. I am currently Senior pursuing BS in Computer Science. Usually I go by Raj in almost all of my classes. 
+       This is CISC474 course on Advanced Web Technologies. Following is the link that would directly take you to the course website page: <br><br>
        <a href="https://mattm401.github.io">CISC474 Course Website </a>
        <br>
        <br>
