Both pages are fully functional yet to apply CSS

--- a/index.html
+++ b/index.html
@@ -16,22 +16,17 @@
   
   <br>
 
+  <div id="myImage">
+   <img src="My_Image.jpg" alt="Professional Pic of myself" width="300" height="300" align="left">
+  </div>
+
   <div id="homepageContent">
-   <img src="My_Image.jpg" alt="Professional Pic of myself" width="400" height="400" align="left"> 
-   <h2> Raj Trivedi | University Of Delaware </h2> 
-   <p> I am Raj Trivedi. I am currently Senior pursuing BS in Computer Science. Usually I go by Raj in almost all of my classes. 
-       This is CISC474 course on Advanced Web Technologies. Following is the link that would directly take you to the course website page: <br><br>
-       <a href="https://mattm401.github.io">CISC474 Course Website </a>
-       <br>
-       <br>
-       <ul style="list-style-position:inside;">
-        The aspects of web development that I am most interested in are as follows:
-        <li> Visual Design </li>
-        <li> Content </li>
-        <li> Web/Mobile Friendly </li>
-        <li> User Interaction </li>
-       </ul>
-          
+   <b> Full name : </b> Raj Trivedi<br>
+   <b> Name in class : </b> Raj <br>
+   <b> Pronouns : </b> He/Him <br>
+   <br>
+   <p> This is CISC474 course on Advanced Web Technologies. <br> </p>
+   <b> Link to the course website: </b> <a href="https://mattm401.github.io">CISC474 Course Website </a>
    </p>
   </div>
 
