Both pages are now fully functional WITH CSS

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,9 +1,17 @@
 <html>
  <head>
+  <style>
+    button{
+       transition-duration: 0.4s;
+    }
+    button:hover{
+       background-color: black;
+    } 
+  </style>
   <title> About Me </title>
  </head>
 
- <body style="font-size:20px;">
+ <body style="font-size:20px; background-color:darkturquoise">
   <div id="heading">
    <h1 align="center"> About Me </h1>
   </div>
@@ -70,7 +78,7 @@
   <br>
 
   <div id="buttons" align="center">
-   <button onclick="window.location.href='index.html'"> Back To Home Page </button>
+   <button style="font-size:20px; color:black; padding: 10px 10px; border-radius: 12px;" onclick="window.location.href='index.html'"> Back To Home Page </button>
   </div>
  </body>
 </html>
