Fixing source code upon validating

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
  <head>
   <style>
    button{
@@ -35,7 +36,6 @@
    <br>
    <p> This is CISC474 course on Advanced Web Technologies. <br> </p>
    <b> Link to the course website: </b> <a href="https://mattm401.github.io">CISC474 Course Website </a>
-   </p>
   </div>
 
   <br clear="all">
