--- a/aboutMe.html
+++ b/aboutMe.html
@@ -44,7 +44,7 @@
   
   <div id="education">
    <h2> Education </h2>
-   <img id="ud_image" src="UD_image.jpeg" width="100" height="100">
+   <img id="ud_image" alt="Image of UD" src="UD_image.jpeg" width="100" height="100">
    <b> Major - </b> Computer Science <br>
    <b> School Year - </b> Senior <br>
    <b> Graduation Date - </b> May 2022 <br>
@@ -52,7 +52,7 @@
   </div>
 
   <br>
-  <br clear="all">
+  <br>
 
   <div id="hobbiesInterests">
    <h2> Hobbies/Interests </h2>
@@ -80,7 +80,7 @@
 
   <div id="interestingFact">
    <h2> Interesting Fact </h2>
-   <img id="small_baby_image" src="small_baby_image.jpeg" width="200" height="200">
+   <img id="small_baby_image" alt="Image of a small baby" src="small_baby_image.jpeg" width="200" height="200">
    <p> I was born on midnight of December 31<sup>st</sup>, 1999. This means it was a change of a Century(from 20th to 21st). 
    <br> Thus, my closed ones also call me <b>millennium boy.</b>
    </p>
