--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+  Name: Raj Trivedi
+  Assignment Name: Personal Website 1
+  UDEL email address: triudrav@udel.edu
+  Course Number: CISC474 010
+-->
 
 <!DOCTYPE html>
 <html lang="en">
