Minor fix in aboutMe page to work successfully against checker

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -94,10 +94,8 @@
    </p>
   </div>
 
-  <br clear="all">
-  <br>
-   
-  <div id="webDevelopmentAspect">
+  <div id="webDevelopmentAspect" style="clear: both;">  
+   <br>
    <h2> Web Development </h2>
    <p> The aspects of web development that I am most interested in are as follows: </p>
    <ul style="list-style-position:inside;">
