Navigation bar/panel is implemented

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
   
   <div id="homepageHeading">
-   <h1> Home Page </h1>
+   <h1> Raj Trivedi </h1>
 
    <!--
        Name: Raj Trivedi
@@ -21,7 +21,10 @@
   </div>
   
   <div id="homepageLinks">
-   <a href="aboutMe.html">About Me</a>
+   <a href="aboutMe.html">About Me</a> &nbsp; &nbsp;
+   <a href="index.html"> Home Page </a> &nbsp; &nbsp;
+   <a href="https://mattm401.github.io">CISC474 Course Website </a> &nbsp; &nbsp;
+   <a href=""> Contact Me </a> &nbsp; &nbsp;
   </div>
   
   <br>
@@ -36,7 +39,6 @@
    <b> Pronouns : </b> He/Him <br>
    <br>
    <p> This is CISC474 course on Advanced Web Technologies. <br> </p>
-   <b> Link to the course website: </b> <a href="https://mattm401.github.io">CISC474 Course Website </a>
   </div>
 
   <br>
