Structuring files into its own folders

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -21,7 +21,7 @@
   
   <div id="education">
    <h2> Education </h2>
-   <img id="ud_image" alt="Image of UD" src="UD_image.jpeg" width="100" height="100">
+   <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
    <b> Major - </b> Computer Science <br>
    <b> School Year - </b> Senior <br>
    <b> Graduation Date - </b> May 2022 <br>
@@ -35,8 +35,8 @@
    <h2> Hobbies/Interests </h2>
 
    &nbsp; &nbsp;
-   <img src="singing_image.jpg" alt="Image of a Mic" width="300" height="300"> &nbsp; &nbsp;   
-   <img src="meditation_image.jpg" alt="Image of a person meditating" width="300" height="300">     
+   <img src="img/singing_image.jpg" alt="Image of a Mic" width="300" height="300"> &nbsp; &nbsp;   
+   <img src="img/meditation_image.jpg" alt="Image of a person meditating" width="300" height="300">     
    <br>
 
    <b id="singing-img-text"> Singing </b>
@@ -44,8 +44,8 @@
    <br> 
    <br> &nbsp; &nbsp;
 
-   <img src="nature_image.jpg" alt="Image of a trees in Fall" width="300" height="300"> &nbsp; &nbsp;
-   <img src="watching_sports_image.jpg" alt="Image of a TV Remote and Sports channel" width="300" height="300">
+   <img src="img/nature_image.jpg" alt="Image of a trees in Fall" width="300" height="300"> &nbsp; &nbsp;
+   <img src="img/watching_sports_image.jpg" alt="Image of a TV Remote and Sports channel" width="300" height="300">
    <br>
 
    <b id="nature-img-text"> Walking out in nature </b>
@@ -57,7 +57,7 @@
 
   <div id="interestingFact">
    <h2> Interesting Fact </h2>
-   <img id="small_baby_image" alt="Image of a small baby" src="small_baby_image.jpeg" width="200" height="200">
+   <img id="small_baby_image" alt="Image of a small baby" src="img/small_baby_image.jpeg" width="200" height="200">
    <p> I was born on midnight of December 31<sup>st</sup>, 1999. This means it was a change of a Century(from 20th to 21st). 
    <br> Thus, my closed ones also call me <b>millennium boy.</b>
    </p>
