--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <br>
 
   <div id="myImage">
-   <img src="My_Image.jpg" id="my_image" alt="Professional Pic of myself" width="300" height="300">
+   <img src="img/My_Image.jpg" id="my_image" alt="Professional Pic of myself" width="300" height="300">
   </div>
 
   <div id="homepageContent">
