Implemented a contact form; Made some changes to website as well

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,6 +19,13 @@
 
   </div>
   
+  <div id="homepageLinks">
+   <a href="aboutMe.html">About Me</a> &nbsp; &nbsp;
+   <a href="index.html"> Home Page </a> &nbsp; &nbsp;
+   <a href="https://mattm401.github.io">CISC474 Course Website </a> &nbsp; &nbsp;
+   <a href="contact_form.html"> Contact Me </a> &nbsp; &nbsp;
+  </div>
+  
   <div id="education">
    <h2> Education </h2>
    <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
@@ -73,13 +80,6 @@
       <li> Web/Mobile Friendly </li>
       <li> User Interaction </li>
    </ul>
-  </div>
-
-  <br>
-  <br>
-
-  <div id="buttons">
-   <button id="back-to-index-button" onclick="window.location.href='index.html'"> Back To Home Page </button>
   </div>
  </body>
 </html>
