--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <a href="aboutMe.html">About Me</a> &nbsp; &nbsp;
    <a href="index.html"> Home Page </a> &nbsp; &nbsp;
    <a href="https://mattm401.github.io">CISC474 Course Website </a> &nbsp; &nbsp;
-   <a href=""> Contact Me </a> &nbsp; &nbsp;
+   <a href="contact_form.html"> Contact Me </a> &nbsp; &nbsp;
   </div>
   
   <br>
