Minor fix in contact_form.html to work against HTML parser

--- a/contact_form.html
+++ b/contact_form.html
@@ -9,7 +9,7 @@
     </head>
 
     <body id="contact_form_body">
-        <h1 align="center"> Contact Me </h1>
+        <h1 class="contactFormHeading"> Contact Me </h1>
         <div id="homepageLinks">
             <a href="aboutMe.html">About Me</a> &nbsp; &nbsp;
             <a href="index.html"> Home Page </a> &nbsp; &nbsp;
@@ -17,8 +17,8 @@
             <a href="contact_form.html"> Contact Me </a> &nbsp; &nbsp;
         </div>
         <br>
-        <h3 align="center"> Have any questions? </h3>
-        <p style="text-align: center"> Please provide your personal contact information by filling up the below form fields and get your questions answered now </p> <br>
+        <h3 class="contactFormHeading"> Have any questions? </h3>
+        <p id="contactFormDescription"> Please provide your personal contact information by filling up the below form fields and get your questions answered now </p> <br>
         <form id="contact_form">
             <p id="successMessage"> </p>
             <label> Last Name </label><br>
