Added the HTML Comment for contact_form.html

--- a/contact_form.html
+++ b/contact_form.html
@@ -10,6 +10,13 @@
 
     <body id="contact_form_body">
         <h1 class="contactFormHeading"> Contact Me </h1>
+        
+   <!--
+       Name: Raj Trivedi
+       Assignment Name: Personal Website 2
+       UDEL email address: triudrav@udel.edu
+       Course Number: CISC474 010
+   -->
         <div id="homepageLinks">
             <a href="aboutMe.html">About Me</a> &nbsp; &nbsp;
             <a href="index.html"> Home Page </a> &nbsp; &nbsp;
