--- a/contact_form.html
+++ b/contact_form.html
@@ -9,7 +9,6 @@
     </head>
 
     <body id="contact_form_body">
-        <h1 class="contactFormHeading"> Contact Me </h1>
         
    <!--
        Name: Raj Trivedi
@@ -17,34 +16,42 @@
        UDEL email address: triudrav@udel.edu
        Course Number: CISC474 010
    -->
-        <div id="homepageLinks">
-            <a href="aboutMe.html">About Me</a> &nbsp; &nbsp;
-            <a href="index.html"> Home Page </a> &nbsp; &nbsp;
-            <a href="https://mattm401.github.io">CISC474 Course Website </a> &nbsp; &nbsp;
-            <a href="contact_form.html"> Contact Me </a> &nbsp; &nbsp;
+        <div id="header">
+            <a href="aboutMe.html" id="aboutMeLink">About Me</a> &nbsp; &nbsp;
+            <a href="index.html" id="homePageLink"> Home Page </a> &nbsp; &nbsp;
+            <span class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
+                <div class="dropdown-content">
+                    <a href="https://mattm401.github.io">CISC474 Course Website</a>
+                    <a href="https://acastro0726.github.io/">Next Student</a>
+                    <a href="https://paultownshend.github.io/personalWebsite/">Previous Student</a>
+                </div>
+            </span>
+            <a href="contact_form.html" id="contactFormLink"> Contact Me </a> &nbsp; &nbsp;
         </div>
+
         <br>
         <h3 class="contactFormHeading"> Have any questions? </h3>
         <p id="contactFormDescription"> Please provide your personal contact information by filling up the below form fields and get your questions answered now </p> <br>
         <form id="contact_form">
             <p id="successMessage"> </p>
-            <label> Last Name </label><br>
+            <label> Last Name<sup>*</sup> </label><br>
             <input type="text" id="user_lname" name="user_lname" autofocus><br><br>
             <p id="lastNameChecker"> </p>
 
-            <label> First Name </label><br>
+            <label> First Name<sup>*</sup> </label><br>
             <input type="text" id="user_fname" name="user_fname"><br><br>
             <p id="firstNameChecker"> </p>
 
-            <label> Email Address </label><br>
+            <label> Email Address<sup>*</sup> </label><br>
             <input type="email" id="user_email" name="user_email" placeholder="xyz@<domain>.<top-level domain>"><br><br>
             <p id="emailChecker"> </p>
 
-            <label> Phone Number </label><br>
+            <label> Phone Number<sup>*</sup> </label><br>
             <input type="tel" name="user_phone" id="user_phone" placeholder="123-456-7890"><br><br>
             <p id="phoneChecker"> </p>
 
-            <label> Message </label><br>
+            <label> Message<sup>*</sup> </label><br>
             <textarea id="user_message" name="user_message"  rows="10" cols="30">
             </textarea><br><br>
             <p id="messageChecker"> </p>
@@ -52,5 +59,22 @@
             
             <button> Submit </button>
         </form>
+
+        <div id="footer">
+            <br>
+            <br>
+            <br>
+            <a href="aboutMe.html" id="footer-aboutMeLink">About Me</a> &nbsp; &nbsp;
+            <a href="index.html" id="footer-homePageLink"> Home Page </a> &nbsp; &nbsp;
+            <a href="contact_form.html" id="footer-contactFormLink"> Contact Me </a> &nbsp; &nbsp;
+            <br>
+            <br>
+            <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
+            <img src="img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30">
+            <br>
+            <br>
+            <br>
+            <em>© 2021 Raj Trivedi. All rights reserved. </em>
+        </div>
     </body>
 </html>    
