Assigned appropriate font-family to website; New Contact Form page is implemented

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,8 +16,8 @@
    -->
   
   <div id="header">
-    <a href="aboutMe.html" id="aboutMeLink">About Me</a> &nbsp; &nbsp;
-    <a href="index.html" id="homePageLink"> Home Page </a> &nbsp; &nbsp;
+    <a href="aboutMe.html" id="aboutMeLink">About</a> &nbsp; &nbsp; &nbsp;
+    <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
     <span class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
         <div class="dropdown-content">
@@ -26,7 +26,7 @@
             <a href="https://paultownshend.github.io/personalWebsite/">Previous Student</a>
         </div>
     </span>
-    <a href="contact_form.html" id="contactFormLink"> Contact Me </a> &nbsp; &nbsp;
+    <a href="contact_form.html" id="contactFormLink">Contact</a> &nbsp; &nbsp;
   </div>
         
   
@@ -90,9 +90,9 @@
     <br>
     <br>
     <br>
-    <a href="aboutMe.html" id="footer-aboutMeLink">About Me</a> &nbsp; &nbsp;
-    <a href="index.html" id="footer-homePageLink"> Home Page </a> &nbsp; &nbsp;
-    <a href="contact_form.html" id="footer-contactFormLink"> Contact Me </a> &nbsp; &nbsp;
+    <a href="aboutMe.html" id="footer-aboutMeLink">About</a> &nbsp; &nbsp; &nbsp;
+    <a href="index.html" id="footer-homePageLink">Home</a> &nbsp; &nbsp;
+    <a href="contact_form.html" id="footer-contactFormLink">Contact</a> &nbsp; &nbsp;
     <br>
     <br>
    <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
